QPID-8614 - [Broker-J] Deprecated reflection methods